Fix display width too wide when long talkgroup name

--- a/client/src/app/components/rdio-scanner/main/main.component.scss
+++ b/client/src/app/components/rdio-scanner/main/main.component.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   display: block;
   max-width: 640px;
+  min-width: 0;
   padding: 24px;
   user-select: none;
 }
